--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "expo": "~50.0.2",
     "expo-barcode-scanner": "~12.9.2",
     "expo-camera": "~14.0.4",
+    "expo-checkbox": "~2.7.0",
+    "expo-clipboard": "~5.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-view-shot": "3.8.0",
+    "react-qr-code": "^2.0.12",
+    "expo-media-library": "~15.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
