--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
-    "expo": "~50.0.2",
-    "expo-barcode-scanner": "~12.9.2",
-    "expo-camera": "~14.0.4",
+    "expo": "~50.0.20",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-camera": "~14.1.3",
     "expo-checkbox": "~2.7.0",
     "expo-clipboard": "~5.0.1",
+    "expo-media-library": "~15.9.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-view-shot": "3.8.0",
-    "react-qr-code": "^2.0.12",
-    "expo-media-library": "~15.9.1"
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
