--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
-    "expo": "~50.0.20",
+    "expo": "^52.0.0",
     "expo-barcode-scanner": "~12.9.3",
     "expo-camera": "~14.1.3",
     "expo-checkbox": "~2.7.0",
