--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
-    "expo": "^52.0.0",
+    "expo": "^52.0.7",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-camera": "~14.1.3",
-    "expo-checkbox": "~2.7.0",
-    "expo-clipboard": "~5.0.1",
-    "expo-media-library": "~15.9.2",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "^0.73.6",
+    "expo-camera": "~16.0.5",
+    "expo-checkbox": "~4.0.0",
+    "expo-clipboard": "~7.0.0",
+    "expo-media-library": "~17.0.2",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-view-shot": "3.8.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
+    "react-native-view-shot": "~4.0.0",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
