--- a/app.json
+++ b/app.json
@@ -39,6 +39,7 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
         }
       ]
-    ]
+    ],
+    "newArchEnabled": true
   }
 }
