--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.0",
     "react-qr-code": "^2.0.12",
-    "expo-font": "~13.0.1"
+    "expo-font": "~13.0.1",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
