fix: good enough functionality for today

--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-barcode-scanner"
     ],
     "newArchEnabled": true,
     "fonts": [
