--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "expo-camera": "~16.0.5",
     "expo-checkbox": "~4.0.0",
     "expo-clipboard": "~7.0.0",
+    "expo-font": "~13.0.1",
     "expo-media-library": "~17.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.0",
-    "react-qr-code": "^2.0.12",
-    "expo-font": "~13.0.1",
-    "react-native-reanimated": "~3.16.1"
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
