--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scoutingapp2024",
+  "name": "scoutingapp2025",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,25 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "base-64": "^1.0.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.28",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-camera": "~16.0.5",
-    "expo-checkbox": "~4.0.0",
-    "expo-clipboard": "~7.0.0",
-    "expo-font": "~13.0.1",
-    "expo-media-library": "~17.0.2",
-    "expo-status-bar": "~2.0.0",
+    "expo-camera": "~16.0.14",
+    "expo-checkbox": "~4.0.1",
+    "expo-clipboard": "~7.0.1",
+    "expo-font": "~13.0.3",
+    "expo-media-library": "~17.0.5",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.6",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-view-shot": "~4.0.0",
+    "react-native-view-shot": "~4.0.3",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
